# lab04

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.sh  tp-lab-actions.yml
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  sources
hello_world_application/_build/formatter_ex_lib/: Makefile  cmake_install.cmake
hello_world_application/_build/formatter_ex_lib/formatter_lib/: Makefile
hello_world_application/_build/formatter_lib/: Makefile
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
solver_application/_build/formatter_ex_lib/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex_lib/formatter_lib/: Makefile
solver_application/_build/solver_lib/: Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
